# code-tales

./: .gitignore  README.md  pyproject.toml
blog/: BLOG_POST.md
examples/: custom-style.yaml
examples/sample-output/: README.md
src/code_tales/: __init__.py  cli.py  config.py  models.py
src/code_tales/pipeline/: __init__.py  analyze.py  clone.py  narrate.py  orchestrate.py  synthesize.py
src/code_tales/styles/: __init__.py  debate.yaml  documentary.yaml  executive.yaml  fiction.yaml  interview.yaml  podcast.yaml  registry.py  storytelling.yaml  technical.yaml  tutorial.yaml
